@@ -1,5 +1,10 @@
 2014-05-07  Rene Liebscher <R.Liebscher@gmx.de>
 
+	bug #42310: New part description for AT90PWM216
+	* avrdude.conf.in: added pwm216 entry
+
+2014-05-07  Rene Liebscher <R.Liebscher@gmx.de>
+
 	bug #42158: Linux GPIO - Source Typo
 	* pindefs.h: fixed typo
 
